Added new images to the site for the breadcrumbs, updated the products page to show the page categories, minified all images.

--- a/aftatech-products.html
+++ b/aftatech-products.html
@@ -232,11 +232,11 @@
                             <div class="gallery-item gallery-style-one">
                                 <div class="item gallery-mixed-item">
                                     <div class="thumb">
-                                        <img src="assets/images/adeolu-eletu-unRkg2jH1j0-unsplash.jpg" alt="Thumb">
+                                        <img src="assets/images/christopher-gower-m_HRfLhgABo-unsplash.jpg" alt="Thumb">
                                     </div>
                                     <div class="content">
                                         <div class="info">
-                                            <h4><a href="project-details.html">Laptops</a></h4>
+                                            <h4><a href="#laptops">Laptops</a></h4>
                                             <span>Technology</span>
                                         </div>
                                     </div>
@@ -248,11 +248,11 @@
                             <div class="gallery-item gallery-style-one">
                                 <div class="item gallery-mixed-item">
                                     <div class="thumb">
-                                        <img src="assets/images/alexander-shatov-mr4JG4SYOF8-unsplash.jpg" alt="Thumb">
+                                        <img src="assets/images/vojtech-bruzek-J82GxqnwKSs-unsplash.jpg" alt="Thumb">
                                     </div>
                                     <div class="content">
                                         <div class="info">
-                                            <h4><a href="project-details.html">Phones</a></h4>
+                                            <h4><a href="#phones">Phones</a></h4>
                                             <span>Technology</span>
                                         </div>
                                     </div>
@@ -264,11 +264,11 @@
                             <div class="gallery-item gallery-style-one">
                                 <div class="item gallery-mixed-item">
                                     <div class="thumb">
-                                        <img src="assets/images/bartek-mazurek-l5U97CiFjTM-unsplash.jpg" alt="Thumb">
+                                        <img src="assets/images/screen-post-dIdWiMTZdto-unsplash.jpg" alt="Thumb">
                                     </div>
                                     <div class="content">
                                         <div class="info">
-                                            <h4><a href="project-details.html">Accessories</a></h4>
+                                            <h4><a href="#gadgets">Accessories and Gadgets</a></h4>
                                             <span>Technology</span>
                                         </div>
                                     </div>
@@ -280,58 +280,11 @@
                             <div class="gallery-item gallery-style-one">
                                 <div class="item gallery-mixed-item">
                                     <div class="thumb">
-                                        <img src="assets/images/annie-spratt-sggw4-qDD54-unsplash.jpg" alt="Thumb">
+                                        <img src="assets/images/onur-binay-_RpPMkqTTTg-unsplash.jpg" alt="Thumb">
                                     </div>
                                     <div class="content">
                                         <div class="info">
-                                            <h4><a href="project-details.html">Gadgets</a></h4>
-                                            <span>Technology</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Single Item -->
-
-                            <!-- Single Item -->
-                            <div class="gallery-item gallery-style-one">
-                                <div class="item gallery-mixed-item">
-                                    <div class="thumb">
-                                        <img src="assets/images/alexandre-debieve-FO7JIlwjOtU-unsplash.jpg" alt="Thumb">
-                                    </div>
-                                    <div class="content">
-                                        <div class="info">
-                                            <h4><a href="project-details.html">Repairs</a></h4>
-                                            <span>Technology</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- End Single Item -->
-    
-                            <!-- Single Item -->
-                            <div class="gallery-item gallery-style-one">
-                                <div class="item gallery-mixed-item">
-                                    <div class="thumb">
-                                        <img src="assets/images/sebastian-herrmann-O2o1hzDA7iE-unsplash.jpg" alt="Thumb">
-                                    </div>
-                                    <div class="content">
-                                        <div class="info">
-                                            <h4><a href="project-details.html">Consultancy</a></h4>
-                                            <span>Technology</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Single Item -->
-                            <!-- Single Item -->
-                            <div class="gallery-item gallery-style-one">
-                                <div class="item gallery-mixed-item">
-                                    <div class="thumb">
-                                        <img src="assets/images/christina-wocintechchat-com-rg1y72eKw6o-unsplash.jpg" alt="Thumb">
-                                    </div>
-                                    <div class="content">
-                                        <div class="info">
-                                            <h4><a href="project-details.html">IT Training</a></h4>
+                                            <h4><a href="#equipment">Equipment</a></h4>
                                             <span>Technology</span>
                                         </div>
                                     </div>
