--- a/device-repairs.html
+++ b/device-repairs.html
@@ -92,7 +92,7 @@
 
      <!-- Start Breadcrumb 
     ============================================= -->
-    <div class="breadcrumb-area text-center shadow dark text-light bg-cover" style="background-image: url(assets/images/cut-in-a-moment-T4QfHGrqT5k-unsplash.jpg);">
+    <div class="breadcrumb-area text-center shadow dark text-light bg-cover" style="background-image: url(assets/images/insung-yoon-dRUqU4RpeOE-unsplash.jpg);">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
@@ -119,7 +119,7 @@
                     
                     <div class="col-xl-8 col-lg-7 pr-45 pr-md-15 pr-xs-15 services-single-content">
                         <div class="thumb">
-                            <img src="assets/images/emmanuel-ikwuegbu-tpTFuvXLNFI-unsplash.jpg" alt="Thumb">
+                            <img src="assets/images/kilian-seiler-PZLgTUAhxMM-unsplash.jpg" alt="Thumb">
                         </div>
                         <h2>Receive Professional Repair Services</h2>
                         <p>
@@ -160,7 +160,7 @@
                                 <div class="col-md-6 col-lg-4">
                                     <div class="item">
                                         <i class="flaticon-laptop mx-auto d-block w-fit"></i>
-                                        <h4 class="text-center"><a href="it-consulting.html">IT <br>Consulting</a></h4>
+                                        <h4 class="text-center"><a href="it-it-consulting.html">IT <br>Consulting</a></h4>
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-lg-4">
@@ -185,7 +185,7 @@
                             <h4 class="widget-title">Technology Services</h4>
                             <div class="content">
                                 <ul>
-                                    <li><a href="consulting.html">IT Consulting</a></li>
+                                    <li><a href="it-consulting.html">IT Consulting</a></li>
                                     <li class="current-item"><a href="#">Mutimedia Rentals</a></li>
                                     <li><a href="dh-and-bsms-services.html">Data Hub and Bulk SMS Services</a></li>
                                     <li><a href="device-repairs.html">Device Repairs</a></li>
