--- a/footer.html
+++ b/footer.html
@@ -36,7 +36,7 @@
                                 <a href="data-hub-and-sms-site.html"><i class="fas fa-angle-right"></i>Data Recharge Services</a>
                             </li>
                             <li>
-                                <a href="it-consulting.html#"><i class="fas fa-angle-right"></i> IT Consulting</a>
+                                <a href="it-it-consulting.html#"><i class="fas fa-angle-right"></i> IT Consulting</a>
                             </li>
                             <li>
                                 <a href="data-hub-and-sms-site.html"><i class="fas fa-angle-right"></i>Bulk SMS Services</a>
