--- a/gadgets-sales.html
+++ b/gadgets-sales.html
@@ -92,7 +92,7 @@
 
      <!-- Start Breadcrumb 
     ============================================= -->
-    <div class="breadcrumb-area text-center shadow dark text-light bg-cover" style="background-image: url(assets/images/cut-in-a-moment-T4QfHGrqT5k-unsplash.jpg);">
+    <div class="breadcrumb-area text-center shadow dark text-light bg-cover" style="background-image: url(assets/images/ady-teenagerinro-sQ0xXxQdfeY-unsplash.jpg);">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
@@ -119,7 +119,7 @@
                     
                     <div class="col-xl-8 col-lg-7 pr-45 pr-md-15 pr-xs-15 services-single-content">
                         <div class="thumb">
-                            <img src="assets/images/emmanuel-ikwuegbu-tpTFuvXLNFI-unsplash.jpg" alt="Thumb">
+                            <img src="assets/images/onur-binay-_RpPMkqTTTg-unsplash.jpg" alt="Thumb">
                         </div>
                         <h2>We Sell Certified Gadgets and Devices</h2>
                         <p>
@@ -257,7 +257,7 @@
                             <div class="content">
                                 <ul>
                                     <li class="current-item"><a href="#">Mutimedia Rentals</a></li>
-                                    <li><a href="it-consulting.html">IT Consulting</a></li>
+                                    <li><a href="it-it-consulting.html">IT Consulting</a></li>
                                     <li><a href="data-hub-and-sms-site.html">Data Hub and Bulk SMS Services</a></li>
                                     <li><a href="device-repairs.html">Device Repairs</a></li>
                                     <li><a href="software-development.html">Software Development</a></li>
