--- a/it-consulting.html
+++ b/it-consulting.html
@@ -92,7 +92,7 @@
 
      <!-- Start Breadcrumb 
     ============================================= -->
-    <div class="breadcrumb-area text-center shadow dark text-light bg-cover" style="background-image: url(assets/images/cut-in-a-moment-T4QfHGrqT5k-unsplash.jpg);">
+    <div class="breadcrumb-area text-center shadow dark text-light bg-cover" style="background-image: url(assets/images/christina-wocintechchat-com-4PU-OC8sW98-unsplash.jpg);">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
@@ -119,7 +119,7 @@
                     
                     <div class="col-xl-8 col-lg-7 pr-45 pr-md-15 pr-xs-15 services-single-content">
                         <div class="thumb">
-                            <img src="assets/images/emmanuel-ikwuegbu-tpTFuvXLNFI-unsplash.jpg" alt="Thumb">
+                            <img src="assets/images/mars-sector-6-BVr3XaBiWLU-unsplash.jpg" alt="Thumb">
                         </div>
                         <h2>Professional IT Consulting and Advisory</h2>
                         <p>
@@ -175,7 +175,7 @@
                                 <div class="col-md-6 col-lg-4">
                                     <div class="item">
                                         <i class="flaticon-dashboard mx-auto d-block w-fit"></i>
-                                        <h4 class="text-center"><a href="it-consulting.html">IT Consulting</a></h4>
+                                        <h4 class="text-center"><a href="it-it-consulting.html">IT Consulting</a></h4>
                                     </div>
                                 </div>
                             </div>
