--- a/software-development.html
+++ b/software-development.html
@@ -92,7 +92,7 @@
 
      <!-- Start Breadcrumb 
     ============================================= -->
-    <div class="breadcrumb-area text-center shadow dark text-light bg-cover" style="background-image: url(assets/images/cut-in-a-moment-T4QfHGrqT5k-unsplash.jpg);">
+    <div class="breadcrumb-area text-center shadow dark text-light bg-cover" style="background-image: url(assets/images/fotis-fotopoulos-DuHKoV44prg-unsplash.jpg);">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
@@ -119,7 +119,7 @@
                     
                     <div class="col-xl-8 col-lg-7 pr-45 pr-md-15 pr-xs-15 services-single-content">
                         <div class="thumb">
-                            <img src="assets/images/emmanuel-ikwuegbu-tpTFuvXLNFI-unsplash.jpg" alt="Thumb">
+                            <img src="assets/images/daniel-korpai-pKRNxEguRgM-unsplash.jpg" alt="Thumb">
                         </div>
                         <h2>Hire Experienced Profesional Developers for your project</h2>
                         <p>
@@ -173,7 +173,7 @@
                                 <div class="col-md-6 col-lg-4">
                                     <div class="item">
                                         <i class="flaticon-dashboard mx-auto d-block w-fit"></i>
-                                        <h4 class="text-center"><a href="it-consulting.html">IT Consulting</a></h4>
+                                        <h4 class="text-center"><a href="it-it-consulting.html">IT Consulting</a></h4>
                                     </div>
                                 </div>
                             </div>
@@ -187,7 +187,7 @@
                             <div class="content">
                                 <ul>
                                     <li class="current-item"><a href="#">Software Development</a></li>
-                                    <li><a href="it-consulting.html">IT Consulting</a></li>
+                                    <li><a href="it-it-consulting.html">IT Consulting</a></li>
                                     <li><a href="data-hub-and-sms-site.html">Data Hub and Bulk SMS Services</a></li>
                                     <li><a href="device-repairs.html">Device Repairs</a></li>
                                     <li><a href="gadgets-sales.html">Sales of Gadgets</a></li>
