--- a/data-hub-and-sms-site.html
+++ b/data-hub-and-sms-site.html
@@ -92,7 +92,7 @@
 
      <!-- Start Breadcrumb 
     ============================================= -->
-    <div class="breadcrumb-area text-center shadow dark text-light bg-cover" style="background-image: url(assets/images/cut-in-a-moment-T4QfHGrqT5k-unsplash.jpg);">
+    <div class="breadcrumb-area text-center shadow dark text-light bg-cover" style="background-image: url(assets/images/jason-leung-mZNRsYE9Qi4-unsplash.jpg);">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
@@ -119,7 +119,7 @@
                     
                     <div class="col-xl-8 col-lg-7 pr-45 pr-md-15 pr-xs-15 services-single-content">
                         <div class="thumb">
-                            <img src="assets/images/emmanuel-ikwuegbu-tpTFuvXLNFI-unsplash.jpg" alt="Thumb">
+                            <img src="assets/images/alexander-shatov-PEJtZfT6C1Q-unsplash.jpg" alt="Thumb">
                         </div>
                         <h2>Recharge Data Bundles and Send Bulk SMS</h2>
                         <p>
@@ -209,7 +209,7 @@
                                 <div class="col-md-6 col-lg-4">
                                     <div class="item">
                                         <i class="flaticon-dashboard mx-auto d-block w-fit"></i>
-                                        <h4 class="text-center"><a href="it-consulting.html">IT Consulting</a></h4>
+                                        <h4 class="text-center"><a href="it-it-consulting.html">IT Consulting</a></h4>
                                     </div>
                                 </div>
                             </div>
@@ -223,7 +223,7 @@
                             <div class="content">
                                 <ul>
                                     <li class="current-item"><a href="#">Data Hub and Bulk SMS Services</a></li>
-                                    <li><a href="consulting.html">IT Consulting</a></li>
+                                    <li><a href="it-consulting.html">IT Consulting</a></li>
                                     <li><a href="multimedia-rentals.html">Multimedia Rentals</a></li>
                                     <li><a href="device-repairs.html">Device Repairs</a></li>
                                     <li><a href="software-development.html">Software Development</a></li>
